Fix side-bar movement and placement of items
Now that the new icons that replace the dummy content are larger, I
fixed the positioning of the items and movement of the side-bar so that
everything doesn't overlap.

--- a/style.css
+++ b/style.css
@@ -80,6 +80,11 @@ html, body {
     width: 4rem;
 }
 
+.introduction {
+    display: flex;
+    flex-direction: column;
+}
+
 .introduction div:first-child {
     font-size: 0.9rem;
     font-family: "Roboto-black";
@@ -129,10 +134,17 @@ button:active {
 
 .main-logo > .logo-and-not-logo-group{
     display: flex;
-    gap: 10px;
+    align-items: center;
+    gap: 15px;
     color: white;
     font-size: 1.75rem;
     font-family: "Roboto-black";
+}
+
+.main-logo > .logo-and-not-logo-group > .logo{
+    display: flex;
+    position: relative;
+    left: -7px;
 }
 
 .options {
@@ -143,7 +155,8 @@ button:active {
 
 .options > .logo-and-not-logo-group{
     display: flex;
-    gap: 10px;
+    align-items: center;
+    gap: 30px;
     color: white;
     font-size: 1.25rem;
 }
@@ -273,7 +286,7 @@ button:active {
 
 @media screen and (max-width: 1264px){
     #container {
-        grid-template-columns: 48px 1fr;
+        grid-template-columns: 70px 1fr;
     }
     .not-logo{
         overflow: hidden;
@@ -305,12 +318,13 @@ button:active {
         grid-row: 1 / 2;
         flex-direction: row;
         justify-content: space-between;
+        gap: 5px;
         align-items: center;
     }
 
     .options {
         flex-direction: row;
-        gap: 30px;
+        gap: 20px;
     }
 
     .not-logo{
@@ -320,18 +334,39 @@ button:active {
     #header {
         grid-row: 2 / 3;
         grid-column: 1 / 2;
+        row-gap: 10px;
+
     }
 
     .icon-big {
         font-size: 2rem;
     }
 
+    .account {
+        /* gap: 5px; */
+        padding-left: 20px;
+    }
+
+    .buttons {
+        grid-column: 1 / 3;
+        justify-content: center;
+    }
+
     button {
-        width: 4rem;
+        width: 7rem;
+    }
+
+    .user-info {
+        display: none;
+    }
+
+    .introduction {
+        display: none;
     }
 
     .introduction div:last-child {
         font-size: 1rem;
+
     }
 
     #main-content {
